# langtest

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  README.md  TODO.md  docker-compose.yml  package-lock.json  pyproject.toml  run.sh
backend/: README.md  main.py
backend/eval/: eval_metrics.py  eval_results.json  generate_qa.py  qa_dataset.json  qa_dataset_synthetic.json  run_eval.py  schema_hierarchy.json  upload_to_supabase.py
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx  index.css
reports/: README.md  TODO.md
